--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
+    <div class="container"></div>
+    <div class="btn-container">
+        <button class="btn reset">Start</button>
+        <button class="btn black">BLACK </button>
+        <button class="btn change-color">RGB</button>
     </div>
+   
  <script src="app.js"></script> 
 </body>
 </html>
