Design Light mode dark mode

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="title">Etch-a-Sketch</div>
     <div class="container"></div>
     <div class="btn-container">
-        <button class="btn reset">Start</button>
+        <button class="btn reset">START</button>
         <button class="btn black">BLACK </button>
-        <button class="btn change-color">RGB</button>
+        <button class="btn change-color">RGB-COLOR</button>
     </div>
-   
+    <footer>
+        <a href="https://github.com/brianindy96">By: Brian Richard Garton</a>
+    </footer>
  <script src="app.js"></script> 
 </body>
 </html>
